# calamares

./: CHANGES-3.4  CMakeLists.txt  CONTRIBUTING.md  settings.conf
src/libcalamares/: Tests.cpp
src/libcalamares/pyboost/: PythonJob.cpp  PythonJobApi.h
src/modules/downloadstage3/: main.py
src/modules/dracut_gentoo/: main.py
src/modules/gentoopkg/: gentoopkg.conf  main.py
src/modules/packagechooser/: CMakeLists.txt
src/modules/partition/: partition.conf
src/modules/partition/core/: PartitionActions.cpp  SizeUtils.h
src/modules/stagechoose/: CMakeLists.txt  Config.cpp  Config.h  SetStage3Job.cpp  SetStage3Job.h  StageChoosePage.cpp  StageChoosePage.h  StageChoosePage.ui  StageChooseViewStep.cpp  StageChooseViewStep.h  StageFetcher.cpp  StageFetcher.h  stagechoose.conf  stagechoose.schema.yaml  stagechoosePage.cpp  stagechooseViewStep.cpp
src/modules/stagechooseq/: CMakeLists.txt  Recommended.qml  Requirements.qml  stagechoose-qt6.qml  stagechoose.qml  stagechoose.qrc  stagechooseQmlViewStep.cpp  stagechooseq-qt6.qrc
src/modules/welcome/: Config.cpp
src/modules/welcomeq/: welcomeq-qt6.qml  welcomeq.qml
